fixed spacing values, improvements | oh | #11

--- a/packages/storefront/src/components/sidebar/sidebar.module.scss
+++ b/packages/storefront/src/components/sidebar/sidebar.module.scss
@@ -22,7 +22,7 @@
       content: "";
       display: flex;
       align-items: center;
-      margin-right: $p-spacing-12;
+      margin-right: $p-spacing-8;
     }
   }
 }
